--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
-flask
-simplejson
+chardet==2.3.0
+click==7.1.1
+command-not-found==0.3
+Flask==1.1.1
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+language-selector==0.1
+MarkupSafe==1.1.1
+pycrypto==2.6.1
+pycurl==7.43.0
+pygobject==3.20.0
+python-apt==1.1.0b1+ubuntu0.16.4.8
+python-debian==0.1.27
+python-systemd==231
+PyYAML==3.11
+requests==2.9.1
+simplejson==3.17.0
+six==1.10.0
+ssh-import-id==5.5
+ubuntu-advantage-tools==19.6
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.13.1
+Werkzeug==1.0.0
+youtube-dl==2020.3.8
